--- a/css/style.css
+++ b/css/style.css
@@ -74,14 +74,16 @@ header {
     justify-content: center;
 }
 
-.get-access-btn::after {
+/*get-access-btn::after {
     content: '→';
-    display: inline-block; /* Ensure the arrow stays inline with text */
-    line-height: 1; /* Reset line-height for the arrow */
+    display: inline-block; 
+    line-height: 1; 
     margin-left: 5px;
-    font-weight: 0;
-    
+    font-weight: 0; 
+
 }
+*/
+
 .get-access-btn:hover {
     background-color: #f5f5f5;
 }
