--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ h1 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url(../assets/roughocean.png);
+    background-image: url(../assets/roughOcean.png);
     background-size: cover;
     background-position: center;
     opacity: 1; /* Adjust this value to change the image opacity */
